@startuml

title __FRONTEND's Class Diagram__\n

    namespace ch.bfh.akka.actorrace.frontend {
      class ch.bfh.akka.actorrace.frontend.CentroDiControllo {
          {static} - instance : CentroDiControllo
          - restart : Button
          - result : Label
          - start : Button
          - stop : Button
          {static} + getInstance()
          + initialize()
          + result()
          + start()
          + stop()
      }
    }
  
  

    namespace ch.bfh.akka.actorrace.frontend {
      class ch.bfh.akka.actorrace.frontend.Controllore {
          {static} - GOAL_X : int
          {static} - GOAL_Y : int
          {static} - HEIGHT : int
          {static} - HEIGHT_CENTRO : int
          {static} - LABIRINTO_WALLS : int
          {static} - LABIRINTO_X : int
          {static} - LABIRINTO_Y : int
          {static} - WIDTH : int
          {static} - WIDTH_CENTRO : int
          - gridHeight : int
          - gridWidth : int
          - group : Group
          - height : int
          {static} - instance : Controllore
          - randLast : Rectangle
          - schneggoLast : Rectangle
          - system : ActorSystem<Message>
          - width : int
          + centroDiControllo()
          {static} + getInstance()
          + initViewLabirinto()
          + initialize()
          + labDesign()
          + startRace()
          + stopRace()
          + update()
          - Controllore()
      }
    }

  

    namespace ch.bfh.akka.actorrace.frontend {
      class ch.bfh.akka.actorrace.frontend.Principale {
          {static} - HEIGHT : int
          {static} - WIDTH : int
          {static} + main()
          + start()
      }
    }

  

  ch.bfh.akka.actorrace.frontend.Controllore o-- ch.bfh.akka.actorrace.backend.LabirintoEstremo : lab
  ch.bfh.akka.actorrace.frontend.Principale -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
